--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -34,11 +34,12 @@
   - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
   - ?
-- 页数: ?
-- 引用: ?
-- 被引: ?
+- 页数: 5
+- 引用: 22
+- 被引: 0
 - 数据:
-  - ? 
+  - [VCTK](../../Datasets/2012.08.00_VCTK.md)
+  - [ESD](../../Datasets/2020.10.28_ESD.md)
 - 对比:
   - ?
 - 复现:
@@ -48,12 +49,21 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 > In the current era of Artificial Intelligence Generated Content (AIGC), a Low-Rank Adaptation (LoRA) method has emerged. It uses a plugin-based approach to learn new knowledge with lower parameter quantities and computational costs, and it can be plugged in and out based on the specific sub-tasks, offering high flexibility. However, the current application schemes primarily incorporate LoRA into the pre-introduced conditional parts of the speech models. This fixes the position of LoRA, limiting the flexibility and scalability of its application. 
 > Therefore, we propose the Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method. Starting from a general neutral speech model, we do not pre-introduce emotional information but instead use the LoRA plugin to design a flexible adaptive scheme that endows the model with emotional generation capabilities. Specifically, we initially train the model using only neutral speech data. After training is complete, we insert LoRA into different modules and fine-tune the model with emotional speech data to find the optimal insertion scheme. Through experiments, we compare and test the effects of inserting LoRA at different positions within the model and assess LoRA's ability to learn various emotions, effectively proving the validity of our method. Additionally, we explore the impact of the rank size of LoRA and the difference compared to directly fine-tuning the entire model.
+
+</details>
+<br>
 
 在当前人工智能生成内容（AIGC）时代，出现了一种低阶自适应（LoRA）方法。它使用基于插件的方法以较低的参数量和计算成本学习新知识，并且可以根据特定的子任务插入和插入，提供了很高的灵活性。然而，当前的应用方案主要将LoRA合并到预先引入的语音模型的条件部分中。这固定了LoRA的位置，限制了其应用程序的灵活性和可扩展性。因此，我们提出了在情感文本到语音（EELE）方法中探索有效且可扩展的LoRA集成。从一般的中性语音模型开始，我们不预先引入情感信息，而是使用LoRA插件来设计一个灵活的自适应方案，赋予模型情感生成能力。具体来说，我们最初只使用中性语音数据来训练模型。训练完成后，我们将LoRA插入到不同的模块中，并用情感语音数据对模型进行微调，以找到最佳插入方案。通过实验，我们比较和测试了在模型内不同位置插入LoRA的效果，并评估了LoRA学习各种情绪的能力，有效地证明了我们方法的有效性。此外，我们还探讨了LoRA的秩大小的影响以及与直接微调整个模型相比的差异。
 
 ## 1.Introduction: 引言
+
+<details>
+<summary>展开原文</summary>
 
 > The development of text-to-speech (TTS) has reached a point where it can generate very high-quality speech. 
 > For example, VITS \cite{kim2021conditional} and Grad-TTS \cite{popov2021grad} have incorporated complex neural network architectures and training strategies to generate results that are very close to real speech.
@@ -85,6 +95,9 @@
 > - We have explored a more flexible and scalable approach for emotion adaptation in speech models.
 > - Through experiments, we tested the impact of deploying the LoRA module at different positions on emotional synthesis and validated the effectiveness of the proposed method.
 > - We tested and validated the impact of rank size on LoRA's emotional learning ability and compared the optimal scheme of adding LoRA with the approach of fine-tuning the entire model.
+
+</details>
+<br>
 
 语音合成发展至今已经能合成十分高质量的语音。
 如 VITS \cite{kim2021conditional}和Grad-TTS\cite{popov2021grad}，通过引入复杂的神经网络结构和训练策略，已经能够生成非常接近真实音频的结果。
@@ -125,11 +138,27 @@ None
 
 ## 3.Methodology: 方法
 
+<details>
+<summary>展开原文</summary>
+
 > This section mainly introduces our various attempts to add emotional generation capabilities to the neutral synthesis model using LoRA, as well as the models and methods we used.
 >
-> We explored using the current mainstream VITS2 model \cite{kong2023vits2}. We added LoRA modules to the model using Microsoft's open-source LoRAlib package \cite{hu2022LoRA}. We experimented with eight different combinations of adding LoRA, as shown in Figure \ref{all_try}.
+> We explored using the current mainstream VITS2 model \cite{kong2023vits2}. We added LoRA modules to the model using Microsoft's open-source LoRAlib package \cite{hu2022LoRA}. We experimented with eight different combinations of adding LoRA, as shown in Figure.01.
 >
 > The VITS2 \cite{kong2023vits2} model utilizes GAN \cite{creswell2018generative} mechanisms during training. Since the discriminator does not participate in the inference process, its parameters are not frozen during fine-tuning. Similarly, the speech encoder also follows this approach.
+
+</details>
+<br>
+
+| **A** | **B** | **C** | **D** |
+|:-:|:-:|:-:|:-:|
+| ![](Images/2024.08.20_EELE_Fig.01a.png) | ![](Images/2024.08.20_EELE_Fig.01b.png) | ![](Images/2024.08.20_EELE_Fig.01c.png) | ![](Images/2024.08.20_EELE_Fig.01d.png) |
+| **E** | **F** | **G** | **H** |
+| ![](Images/2024.08.20_EELE_Fig.01e.png) | ![](Images/2024.08.20_EELE_Fig.01f.png) | ![](Images/2024.08.20_EELE_Fig.01g.png) | ![](Images/2024.08.20_EELE_Fig.01h.png) |
+
+> Figure.01: An Overview of All Attempts to Add LoRA to the Model.
+> "Snow": Freezing All Parameters.
+> "Fire": Freezing All Parameters and Adding LoRA for Fine-Tuning.
 
 本节主要介绍我们利用LoRA为中性合成模型添加情感生成能力所做的各种尝试，以及我们所用模型和方法。
 我们用目前主流的VITS2\cite{kong2023vits2}模型进行探索。用微软开源的LoRAlib包\cite{hu2022LoRA}为模型添加LoRA模块。我们进行了8种不同添加LoRA的组合如图1所示\ref{all_try}.
@@ -137,11 +166,17 @@ VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过
 
 ### 3.1.Where to add: Exploring the deployment of LoRA
 
+<details>
+<summary>展开原文</summary>
+
 > A text encoder is responsible for extracting text features. A stochastic duration predictor estimates duration features from these text features. The projection layer determines the sampling distribution. The flow layer converts the sampling results into acoustic features, and the decoder transforms these acoustic features into a speech waveform.
 > 
 > From the functions of these modules, it can be seen that the text encoder and projection layer are mainly responsible for front-end modeling, the flow layer and decoder are responsible for back-end modeling, and the duration predictor is responsible for modeling alignment information. So when adding LoRA to the model, it is mainly divided into these three categories for design. 
 > 
-> We integrated LoRA in eight different ways, as shown in Figure \ref{all_try}, to explore whether emotion is more suitable for modeling in the front-end text features or in the back-end acoustic features. Additionally, we investigated the impact of duration alignment information on emotional expression.
+> We integrated LoRA in eight different ways, as shown in Figure.01, to explore whether emotion is more suitable for modeling in the front-end text features or in the back-end acoustic features. Additionally, we investigated the impact of duration alignment information on emotional expression.
+
+</details>
+<br>
 
 文本编码器负责得到文本特征，随机时长预测器从文本特征中预测时长特征，映射层负责得到采样分布，流模型将采样结果转换为声学特征，解码器将声学特征解码为音频波形。
 从这些模块的作用可以看出：文本编码器和投影层主要负责前端的建模，flow层和解码器负责后端的建模，时长预测器负责建模对齐信息。所以将LoRA添加到模型当中时主要分为这三个大类来设计。
@@ -149,7 +184,13 @@ VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过
 
 ### 3.2.How to add: Implantation of LORA in TTS model
 
+<details>
+<summary>展开原文</summary>
+
 > In the VITS2 model \cite{kong2023vits2}, linear layers and 1D convolutional layers are primarily used. The LoRAlib package \cite{hu2022LoRA} conveniently includes methods for adding LoRA to these types of layers. After importing the package, we added low-rank matrices to each layer of the corresponding modules according to the eight different schemes, as illustrated in Figure \ref{LoRA}.
+
+</details>
+<br>
 
 VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAlib package \cite{hu2022LoRA}中正好内置了这些层添加LoRA的方式。我们导入包后按照8中方案分别为对应模块的每个层添加低秩矩阵，如图\ref{LoRA}所示。
 
@@ -157,26 +198,44 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 
 ### 4.1.Dataset
 
+<details>
+<summary>展开原文</summary>
+
 > We used the ESD \cite{zhou2022emotional} dataset and the VCTK \cite{Veaux2017CSTRVC} dataset.
 >
 > The VCTK Corpus includes around 44 hours of speech data uttered by 110 English speakers with various accents. Each speaker reads out about 400 sentences, which were selected from a newspaper, the rainbow passage, and an elicitation paragraph used for the speech accent archive. We resampled all speeches to 16 kHz.
 >
 > ESD is an Emotional Speech Database for voice conversion research. The ESD database consists of 350 parallel utterances spoken by 10 native English and 10 native Chinese speakers and covers 5 emotion categories (neutral, happy, angry, sad, and surprise). More than 29 hours of speech data were recorded in a controlled acoustic environment. The database is suitable for multi-speaker and cross-lingual emotional voice conversion studies. In this experiment, only the English data was used. We resampled all speeches to 16 kHz.
 
+</details>
+<br>
+
 ### 4.2.Metric
+
+<details>
+<summary>展开原文</summary>
 
 > In the subjective experimental part, we hired 20 volunteers to conduct emotional evaluations of the experimental results and distinguish the emotional categories of speech. After the evaluation is completed, calculate the ratios recognized as corresponding emotions separately.
 >
 > The objective experiment used a pre-trained model for emotion recognition \cite{enrique_hernández_calabrés_2024} to identify the experimental results. After the evaluation is completed, calculate the ratios recognized as corresponding emotions separately.
+
+</details>
+<br>
 
 主观实验部分，我们雇佣20名志愿者，为实验结果进行情感评价，判别语音的情感类别。评测结束后分别计算识别为对应情感的比率。
 客观实验采用情感识别的预训练模型 \cite{enrique_hernández_calabrés_2024}识别实验结果。评测结束后，分别计算识别为对应情感的比率。
 
 ### 4.3.Task
 
-> In the subjective experiment, we hired 25 paid evaluators who had undergone professional training. They primarily assessed the eight methods of adding LoRA shown in Figure \ref{all_try} compared to the original without LoRA. For each emotion, they judged the proportion of sentences that were identified as expressing the corresponding emotion. Each evaluator assessed 300 sentences for each emotion.
+<details>
+<summary>展开原文</summary>
+
+> In the subjective experiment, we hired 25 paid evaluators who had undergone professional training. They primarily assessed the eight methods of adding LoRA shown in Figure.01 compared to the original without LoRA. For each emotion, they judged the proportion of sentences that were identified as expressing the corresponding emotion. Each evaluator assessed 300 sentences for each emotion.
 >
 > In the objective evaluation, we used a pre-trained model instead of human judgment to perform the same type of experiment as in the subjective evaluation. Additionally, for the best-performing LoRA integration method, we tested the impact of matrix rank size and compared the emotional expression performance with that of fine-tuning.
+
+</details>
+<br>
 
 在主观实验中，我们聘请了25为付费的评测人员，事先经过专业培训，主要评测图\ref{all_try}中8种添加LoRA的方式与没有LoRA前，在每种情感上，被人为判断为相应情感的比率，每人每种情感评测300句话。
 
@@ -186,10 +245,16 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 
 ### 5.1.Subjective evaluation
 
+<details>
+<summary>展开原文</summary>
+
 > The results of the subjective experiment are shown in Table \ref{sub}.
 > Among them, $tts$ represents the evaluation results of the speech synthesized using a pre-trained neutral speech model without adding any LoRA plugins or conducting any fine-tuning.
 >
 > Based on the results in the table, it can be observed that emotions with distinct characteristics, such as $angry$, often have high recognition rates. In contrast, more neutral emotions, such as $surprise$, are harder for people to perceive. The emotions $sad$ and $happy$ show relatively balanced performance. Among them, $g$ demonstrates notable expressiveness. We guess that emotional information is a speech feature, and therefore, assigning the learning of this knowledge to the model's acoustic modeling part can enhance its ability to model emotions. Additionally, the duration of pronunciation also affects emotional expressiveness, as people often use the speed of speech as one of the factors in determining the emotional category.
+
+</details>
+<br>
 
 主观实验结果如表\ref{sub}/所示。
 其中$tts$是没有在任何位置添加LoRA插件，也没有进行任何微调，直接用训练好的中性语音模型合成音频的评测结果。
@@ -199,11 +264,17 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 
 #### 5.2.1.Emotion Recognition Results
 
+<details>
+<summary>展开原文</summary>
+
 > The results of the objective experiment are shown in Table \ref{Obj}.
 > Among them, $tts$ represents the evaluation results of the speech synthesized using a pre-trained neutral speech model without adding any LoRA plugins or conducting any fine-tuning.
 >
 > The objective experiment indicates that $g$ performs the best, which is consistent with the findings of the subjective experiment.
 > Among them, the recognition rate for $angry$ is the highest, with more noticeable improvements observed for $happy$ and $sad$, while $surprise$ still maintains the lowest recognition rate.
+
+</details>
+<br>
 
 客观实验结果如表\ref{Obj}/所示。
 其中$tts$是没有在任何位置添加LoRA插件，也没有进行任何微调，直接用训练好的中性语音模型合成音频的评测结果。
@@ -212,12 +283,18 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 
 ### 5.2.2.The impact of changes in r-value
 
+<details>
+<summary>展开原文</summary>
+
 > The impact of the r-value on emotional performance is shown in Table \ref{rrr}.
 > $r$ represents the size of the matrix rank, where smaller values of $r$ indicate fewer parameters.
 > We selected the best-performing $g$ and conducted four experiments with $r$ values of 2, 4, 8, and 16.
 >
 > From the experimental results, we found that varying the r-value did not appear to affect emotional performance.
 > We have two hypotheses: (1) We trained LoRA separately for each emotion, and emotions contain relatively limited information, which can be learned with a small number of parameters. (2) The emotional fine-tuning data we used may not be sufficient, allowing LoRA to fully learn the emotional information with fewer parameters.
+
+</details>
+<br>
 
 r值对情感表现的影响结果如表\ref{rrr}所示。
 r代表矩阵秩的大小，越小的r值代表着更少的参数量。
@@ -228,10 +305,16 @@ r代表矩阵秩的大小，越小的r值代表着更少的参数量。
 
 ### 5.2.3.Compared with Fine-Tuning
 
+<details>
+<summary>展开原文</summary>
+
 > The primary goal of this section's experiment is to observe whether our method has an advantage over conventional fine-tuning. The experimental results are shown in Table \ref{compare}.
 > We also used $g$ as the method for adding LoRA, with an r-value of 16. We observed that, apart from $angry$ which showed the same performance, the recognition rates for the other three emotions were slightly lower compared to direct fine-tuning.
 > We speculate that the decoupling of information in the current synthesis model is not yet complete. As a result, the text feature modeling part also affects emotional performance. If we continue to add LoRA to the relevant parts, the performance should improve.
 > Although the current experimental results are slightly behind, considering the number of parameters, scalability, and plug-and-play convenience, the method of using LoRA to endow the model with emotional expression capabilities is still highly advantageous.
+
+</details>
+<br>
 
 本节实验主要是为了观察我们的方法对比常规微调是否具备优势，实验结果如表\ref{compare}所示。
 
@@ -241,7 +324,13 @@ r代表矩阵秩的大小，越小的r值代表着更少的参数量。
 
 ## 6.Conclusions: 结论
 
+<details>
+<summary>展开原文</summary>
+
 In this paper, we introduced the EELE method, using LoRA to enable neutral TTS models to generate emotional speech without requiring emotion-specific training. This plug-and-play solution proved effective, creating a flexible, scalable emotional TTS system. Evaluations confirmed its ability to enhance emotional expression, with applications in movies, games, and voice acting. The EELE method advances adaptable emotional TTS systems, contributing to AI-generated content, with future work focusing on refining LoRA integration and broadening emotional expression.
+
+</details>
+<br>
 
 在本文中，我们介绍了 ***EELE: Grant Synthetic Speech Emotions Using LoRA*** 方法，该方法利用 LoRA 插件来赋予中性语音模型情感生成能力。我们的方法解决了传统情感TTS模型的局限性，即在初始训练期间需要情感类别信息，从而限制了它们的灵活性和可扩展性。通过利用LoRA，我们提供了一种新的解决方案，允许以即插即用的方式将情感能力添加到预先训练的中性TTS模型中。
 我们的实验证明了在模型内不同位置添加LoRA的效果，我们使用4种类别的情感语音数据训练了4套LoRA情感模块。这产生了一个高度灵活和可扩展的情绪TTS系统，该系统能够生成不同的情绪，而不需要从头开始重新训练整个模型。
