--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -52,8 +52,16 @@
 <details>
 <summary>展开原文</summary>
 
-> In the current era of Artificial Intelligence Generated Content (AIGC), a Low-Rank Adaptation (LoRA) method has emerged. It uses a plugin-based approach to learn new knowledge with lower parameter quantities and computational costs, and it can be plugged in and out based on the specific sub-tasks, offering high flexibility. However, the current application schemes primarily incorporate LoRA into the pre-introduced conditional parts of the speech models. This fixes the position of LoRA, limiting the flexibility and scalability of its application. 
-> Therefore, we propose the Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method. Starting from a general neutral speech model, we do not pre-introduce emotional information but instead use the LoRA plugin to design a flexible adaptive scheme that endows the model with emotional generation capabilities. Specifically, we initially train the model using only neutral speech data. After training is complete, we insert LoRA into different modules and fine-tune the model with emotional speech data to find the optimal insertion scheme. Through experiments, we compare and test the effects of inserting LoRA at different positions within the model and assess LoRA's ability to learn various emotions, effectively proving the validity of our method. Additionally, we explore the impact of the rank size of LoRA and the difference compared to directly fine-tuning the entire model.
+> In the current era of Artificial Intelligence Generated Content (AIGC), a Low-Rank Adaptation (LoRA) method has emerged. 
+> It uses a plugin-based approach to learn new knowledge with lower parameter quantities and computational costs, and it can be plugged in and out based on the specific sub-tasks, offering high flexibility. 
+> However, the current application schemes primarily incorporate LoRA into the pre-introduced conditional parts of the speech models. 
+> This fixes the position of LoRA, limiting the flexibility and scalability of its application. 
+> Therefore, we propose the Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method. 
+> Starting from a general neutral speech model, we do not pre-introduce emotional information but instead use the LoRA plugin to design a flexible adaptive scheme that endows the model with emotional generation capabilities. 
+> Specifically, we initially train the model using only neutral speech data. 
+> After training is complete, we insert LoRA into different modules and fine-tune the model with emotional speech data to find the optimal insertion scheme. 
+> Through experiments, we compare and test the effects of inserting LoRA at different positions within the model and assess LoRA's ability to learn various emotions, effectively proving the validity of our method. 
+> Additionally, we explore the impact of the rank size of LoRA and the difference compared to directly fine-tuning the entire model.
 
 </details>
 <br>
@@ -72,12 +80,21 @@
 >
 > There has been a significant amount of work on emotion TTS, but most of these approaches incorporate emotional information during the initial model training stage.
 > These approaches can be broadly categorized into three types: directly providing emotion categories, predicting emotions from text, and extracting emotions from reference speech.
-> In the approach that directly provides emotion categories, C Cui et al. \cite{cui2021emovie} directly provide emotion labels, which are sent into the emotion predictor along with the results from the text encoder. The generated emotional information is then fed into the subsequent parts of the model.
-> In the approach that predicts emotions from text, Tu et al. \cite{tu2022contextual} argue that emotional labels depend on the contextual situation rather than specific tags. Therefore, they predict emotions by modeling the context.
-> In the approach that extracts emotions from reference audio, S. Oh et al. \cite{oh2019determination} proposed the Global Style Token (GST) method. This method encodes reference audio and combines it with global emotion labels through attention mechanisms, using the result as an emotional embedding. R. Liu et al. \cite{liu2021reinforcement} employed a similar approach, adding emotion recognition for adversarial training to improve the accuracy of label generation. Additionally, D. Min et al. \cite{min2021meta} directly encoded the style of the reference audio and fed the result into the model. Kang et al. \cite{kang2023grad} utilized a diffusion model for speech synthesis, incorporating the encoded result into the diffusion steps.
+> In the approach that directly provides emotion categories, C Cui et al. \cite{cui2021emovie} directly provide emotion labels, which are sent into the emotion predictor along with the results from the text encoder. 
+> The generated emotional information is then fed into the subsequent parts of the model.
+> In the approach that predicts emotions from text, Tu et al. \cite{tu2022contextual} argue that emotional labels depend on the contextual situation rather than specific tags. 
+> Therefore, they predict emotions by modeling the context.
+> In the approach that extracts emotions from reference audio, S. Oh et al. \cite{oh2019determination} proposed the Global Style Token (GST) method. 
+> This method encodes reference audio and combines it with global emotion labels through attention mechanisms, using the result as an emotional embedding. 
+> R. Liu et al. \cite{liu2021reinforcement} employed a similar approach, adding emotion recognition for adversarial training to improve the accuracy of label generation. 
+> Additionally, D. Min et al. \cite{min2021meta} directly encoded the style of the reference audio and fed the result into the model. 
+> Kang et al. \cite{kang2023grad} utilized a diffusion model for speech synthesis, incorporating the encoded result into the diffusion steps.
 >
 > Despite the outstanding emotional expression achieved by these methods, their inclusion of emotion information during training limits the inference stage to a fixed number of emotion categories, resulting in insufficient scalability and flexibility.
-> In the current context of the booming development of AIGC technology, fine-tuning large models with all parameters requires a significant amount of computational cost. Therefore, the LoRA \cite{hu2021LoRA} plugin method has emerged. It records new knowledge by freezing the original parameters of the model and multiplying two low-rank matrices. When facing different downstream segmentation tasks, LoRA can train multiple sets of plugins to achieve plug-and-play simultaneously.
+> In the current context of the booming development of AIGC technology, fine-tuning large models with all parameters requires a significant amount of computational cost. 
+> Therefore, the LoRA \cite{hu2021LoRA} plugin method has emerged. 
+> It records new knowledge by freezing the original parameters of the model and multiplying two low-rank matrices. 
+> When facing different downstream segmentation tasks, LoRA can train multiple sets of plugins to achieve plug-and-play simultaneously.
 >
 > Due to the low computational cost and flexibility of LoRA, many related works have emerged.
 > V Shah et al. \cite{shah2023zipLoRA} used LoRA to independently learn the style and content of images, achieving arbitrary combinations of style and content.
@@ -86,11 +103,16 @@
 > Additionally, there are some related variants.
 > Y Wang et al. \cite{wang2024residualtransformer} additionally introduced diagonal weight matrices to enhance the modeling capability of low-rank matrices.
 > S. Hayou et al. \cite{hayou2024LoRA+} set different learning rates for two low-rank matrices to improve model training efficiency.
-> L. Zhang et al. \cite{zhang2023LoRA} froze one of the two low-rank matrices and trained only the other matrix independently. This halved the number of parameters while maintaining performance comparable to standard LoRA techniques.
+> L. Zhang et al. \cite{zhang2023LoRA} froze one of the two low-rank matrices and trained only the other matrix independently. 
+> This halved the number of parameters while maintaining performance comparable to standard LoRA techniques.
 >
-> Although there are many applications and improvements of LoRA, most of them are limited to adjusting the condition part of the model, which requires the model to pre-introduce control information. This actually limits the potential for further expansion of the model's functionality. Therefore, we propose the Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method.
+> Although there are many applications and improvements of LoRA, most of them are limited to adjusting the condition part of the model, which requires the model to pre-introduce control information. 
+> This actually limits the potential for further expansion of the model's functionality. 
+> Therefore, we propose the Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method.
 > We use the VITS2 model \cite{kong2023vits2} as our baseline, training the model with neutral speech data.
-> Subsequently, we added LoRA to different modules within the model and fine-tuned it with emotional speech data, using subjective and objective experiments to verify and test the impact of adding LoRA at different positions. We also trained a separate set of LoRA for each emotion to test LoRA's ability to learn different emotions. After endowing the neutral model with emotional generation capabilities, we further explore the impact of the rank size of LoRA and the difference compared to directly fine-tuning the entire model.
+> Subsequently, we added LoRA to different modules within the model and fine-tuned it with emotional speech data, using subjective and objective experiments to verify and test the impact of adding LoRA at different positions. 
+> We also trained a separate set of LoRA for each emotion to test LoRA's ability to learn different emotions. 
+> After endowing the neutral model with emotional generation capabilities, we further explore the impact of the rank size of LoRA and the difference compared to directly fine-tuning the entire model.
 > The main contributions in this paper are as follows:
 > - We have explored a more flexible and scalable approach for emotion adaptation in speech models.
 > - Through experiments, we tested the impact of deploying the LoRA module at different positions on emotional synthesis and validated the effectiveness of the proposed method.
@@ -143,9 +165,13 @@ None
 
 > This section mainly introduces our various attempts to add emotional generation capabilities to the neutral synthesis model using LoRA, as well as the models and methods we used.
 >
-> We explored using the current mainstream VITS2 model \cite{kong2023vits2}. We added LoRA modules to the model using Microsoft's open-source LoRAlib package \cite{hu2022LoRA}. We experimented with eight different combinations of adding LoRA, as shown in Figure.01.
+> We explored using the current mainstream VITS2 model \cite{kong2023vits2}. 
+> We added LoRA modules to the model using Microsoft's open-source LoRAlib package \cite{hu2022LoRA}. 
+> We experimented with eight different combinations of adding LoRA, as shown in Figure.01.
 >
-> The VITS2 \cite{kong2023vits2} model utilizes GAN \cite{creswell2018generative} mechanisms during training. Since the discriminator does not participate in the inference process, its parameters are not frozen during fine-tuning. Similarly, the speech encoder also follows this approach.
+> The VITS2 \cite{kong2023vits2} model utilizes GAN \cite{creswell2018generative} mechanisms during training. 
+> Since the discriminator does not participate in the inference process, its parameters are not frozen during fine-tuning. 
+> Similarly, the speech encoder also follows this approach.
 
 </details>
 <br>
@@ -169,11 +195,16 @@ VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过
 <details>
 <summary>展开原文</summary>
 
-> A text encoder is responsible for extracting text features. A stochastic duration predictor estimates duration features from these text features. The projection layer determines the sampling distribution. The flow layer converts the sampling results into acoustic features, and the decoder transforms these acoustic features into a speech waveform.
+> A text encoder is responsible for extracting text features. 
+> A stochastic duration predictor estimates duration features from these text features. 
+> The projection layer determines the sampling distribution. 
+> The flow layer converts the sampling results into acoustic features, and the decoder transforms these acoustic features into a speech waveform.
 > 
-> From the functions of these modules, it can be seen that the text encoder and projection layer are mainly responsible for front-end modeling, the flow layer and decoder are responsible for back-end modeling, and the duration predictor is responsible for modeling alignment information. So when adding LoRA to the model, it is mainly divided into these three categories for design. 
+> From the functions of these modules, it can be seen that the text encoder and projection layer are mainly responsible for front-end modeling, the flow layer and decoder are responsible for back-end modeling, and the duration predictor is responsible for modeling alignment information. 
+> So when adding LoRA to the model, it is mainly divided into these three categories for design. 
 > 
-> We integrated LoRA in eight different ways, as shown in Figure.01, to explore whether emotion is more suitable for modeling in the front-end text features or in the back-end acoustic features. Additionally, we investigated the impact of duration alignment information on emotional expression.
+> We integrated LoRA in eight different ways, as shown in Figure.01, to explore whether emotion is more suitable for modeling in the front-end text features or in the back-end acoustic features. 
+> Additionally, we investigated the impact of duration alignment information on emotional expression.
 
 </details>
 <br>
@@ -187,7 +218,9 @@ VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过
 <details>
 <summary>展开原文</summary>
 
-> In the VITS2 model \cite{kong2023vits2}, linear layers and 1D convolutional layers are primarily used. The LoRAlib package \cite{hu2022LoRA} conveniently includes methods for adding LoRA to these types of layers. After importing the package, we added low-rank matrices to each layer of the corresponding modules according to the eight different schemes, as illustrated in Figure \ref{LoRA}.
+> In the VITS2 model \cite{kong2023vits2}, linear layers and 1D convolutional layers are primarily used. 
+> The LoRAlib package \cite{hu2022LoRA} conveniently includes methods for adding LoRA to these types of layers. 
+> After importing the package, we added low-rank matrices to each layer of the corresponding modules according to the eight different schemes, as illustrated in Figure \ref{LoRA}.
 
 </details>
 <br>
@@ -203,9 +236,16 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 
 > We used the ESD \cite{zhou2022emotional} dataset and the VCTK \cite{Veaux2017CSTRVC} dataset.
 >
-> The VCTK Corpus includes around 44 hours of speech data uttered by 110 English speakers with various accents. Each speaker reads out about 400 sentences, which were selected from a newspaper, the rainbow passage, and an elicitation paragraph used for the speech accent archive. We resampled all speeches to 16 kHz.
+> The VCTK Corpus includes around 44 hours of speech data uttered by 110 English speakers with various accents. 
+> Each speaker reads out about 400 sentences, which were selected from a newspaper, the rainbow passage, and an elicitation paragraph used for the speech accent archive. 
+> We resampled all speeches to 16 kHz.
 >
-> ESD is an Emotional Speech Database for voice conversion research. The ESD database consists of 350 parallel utterances spoken by 10 native English and 10 native Chinese speakers and covers 5 emotion categories (neutral, happy, angry, sad, and surprise). More than 29 hours of speech data were recorded in a controlled acoustic environment. The database is suitable for multi-speaker and cross-lingual emotional voice conversion studies. In this experiment, only the English data was used. We resampled all speeches to 16 kHz.
+> ESD is an Emotional Speech Database for voice conversion research. 
+> The ESD database consists of 350 parallel utterances spoken by 10 native English and 10 native Chinese speakers and covers 5 emotion categories (neutral, happy, angry, sad, and surprise). 
+> More than 29 hours of speech data were recorded in a controlled acoustic environment. 
+> The database is suitable for multi-speaker and cross-lingual emotional voice conversion studies. 
+> In this experiment, only the English data was used. 
+> We resampled all speeches to 16 kHz.
 
 </details>
 <br>
@@ -215,9 +255,11 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 <details>
 <summary>展开原文</summary>
 
-> In the subjective experimental part, we hired 20 volunteers to conduct emotional evaluations of the experimental results and distinguish the emotional categories of speech. After the evaluation is completed, calculate the ratios recognized as corresponding emotions separately.
+> In the subjective experimental part, we hired 20 volunteers to conduct emotional evaluations of the experimental results and distinguish the emotional categories of speech. 
+> After the evaluation is completed, calculate the ratios recognized as corresponding emotions separately.
 >
-> The objective experiment used a pre-trained model for emotion recognition \cite{enrique_hernández_calabrés_2024} to identify the experimental results. After the evaluation is completed, calculate the ratios recognized as corresponding emotions separately.
+> The objective experiment used a pre-trained model for emotion recognition \cite{enrique_hernández_calabrés_2024} to identify the experimental results. 
+> After the evaluation is completed, calculate the ratios recognized as corresponding emotions separately.
 
 </details>
 <br>
@@ -230,9 +272,13 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 <details>
 <summary>展开原文</summary>
 
-> In the subjective experiment, we hired 25 paid evaluators who had undergone professional training. They primarily assessed the eight methods of adding LoRA shown in Figure.01 compared to the original without LoRA. For each emotion, they judged the proportion of sentences that were identified as expressing the corresponding emotion. Each evaluator assessed 300 sentences for each emotion.
+> In the subjective experiment, we hired 25 paid evaluators who had undergone professional training. 
+> They primarily assessed the eight methods of adding LoRA shown in Figure.01 compared to the original without LoRA. 
+> For each emotion, they judged the proportion of sentences that were identified as expressing the corresponding emotion. 
+> Each evaluator assessed 300 sentences for each emotion.
 >
-> In the objective evaluation, we used a pre-trained model instead of human judgment to perform the same type of experiment as in the subjective evaluation. Additionally, for the best-performing LoRA integration method, we tested the impact of matrix rank size and compared the emotional expression performance with that of fine-tuning.
+> In the objective evaluation, we used a pre-trained model instead of human judgment to perform the same type of experiment as in the subjective evaluation. 
+> Additionally, for the best-performing LoRA integration method, we tested the impact of matrix rank size and compared the emotional expression performance with that of fine-tuning.
 
 </details>
 <br>
@@ -251,7 +297,12 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 > The results of the subjective experiment are shown in Table \ref{sub}.
 > Among them, $tts$ represents the evaluation results of the speech synthesized using a pre-trained neutral speech model without adding any LoRA plugins or conducting any fine-tuning.
 >
-> Based on the results in the table, it can be observed that emotions with distinct characteristics, such as $angry$, often have high recognition rates. In contrast, more neutral emotions, such as $surprise$, are harder for people to perceive. The emotions $sad$ and $happy$ show relatively balanced performance. Among them, $g$ demonstrates notable expressiveness. We guess that emotional information is a speech feature, and therefore, assigning the learning of this knowledge to the model's acoustic modeling part can enhance its ability to model emotions. Additionally, the duration of pronunciation also affects emotional expressiveness, as people often use the speed of speech as one of the factors in determining the emotional category.
+> Based on the results in the table, it can be observed that emotions with distinct characteristics, such as $angry$, often have high recognition rates. 
+> In contrast, more neutral emotions, such as $surprise$, are harder for people to perceive. 
+> The emotions $sad$ and $happy$ show relatively balanced performance. 
+> Among them, $g$ demonstrates notable expressiveness. 
+> We guess that emotional information is a speech feature, and therefore, assigning the learning of this knowledge to the model's acoustic modeling part can enhance its ability to model emotions. 
+> Additionally, the duration of pronunciation also affects emotional expressiveness, as people often use the speed of speech as one of the factors in determining the emotional category.
 
 </details>
 <br>
@@ -308,9 +359,13 @@ r代表矩阵秩的大小，越小的r值代表着更少的参数量。
 <details>
 <summary>展开原文</summary>
 
-> The primary goal of this section's experiment is to observe whether our method has an advantage over conventional fine-tuning. The experimental results are shown in Table \ref{compare}.
-> We also used $g$ as the method for adding LoRA, with an r-value of 16. We observed that, apart from $angry$ which showed the same performance, the recognition rates for the other three emotions were slightly lower compared to direct fine-tuning.
-> We speculate that the decoupling of information in the current synthesis model is not yet complete. As a result, the text feature modeling part also affects emotional performance. If we continue to add LoRA to the relevant parts, the performance should improve.
+> The primary goal of this section's experiment is to observe whether our method has an advantage over conventional fine-tuning. 
+> The experimental results are shown in Table \ref{compare}.
+> We also used $g$ as the method for adding LoRA, with an r-value of 16. 
+> We observed that, apart from $angry$ which showed the same performance, the recognition rates for the other three emotions were slightly lower compared to direct fine-tuning.
+> We speculate that the decoupling of information in the current synthesis model is not yet complete. 
+> As a result, the text feature modeling part also affects emotional performance. 
+> If we continue to add LoRA to the relevant parts, the performance should improve.
 > Although the current experimental results are slightly behind, considering the number of parameters, scalability, and plug-and-play convenience, the method of using LoRA to endow the model with emotional expression capabilities is still highly advantageous.
 
 </details>
@@ -327,7 +382,10 @@ r代表矩阵秩的大小，越小的r值代表着更少的参数量。
 <details>
 <summary>展开原文</summary>
 
-In this paper, we introduced the EELE method, using LoRA to enable neutral TTS models to generate emotional speech without requiring emotion-specific training. This plug-and-play solution proved effective, creating a flexible, scalable emotional TTS system. Evaluations confirmed its ability to enhance emotional expression, with applications in movies, games, and voice acting. The EELE method advances adaptable emotional TTS systems, contributing to AI-generated content, with future work focusing on refining LoRA integration and broadening emotional expression.
+In this paper, we introduced the EELE method, using LoRA to enable neutral TTS models to generate emotional speech without requiring emotion-specific training. 
+> This plug-and-play solution proved effective, creating a flexible, scalable emotional TTS system. 
+> Evaluations confirmed its ability to enhance emotional expression, with applications in movies, games, and voice acting. 
+> The EELE method advances adaptable emotional TTS systems, contributing to AI-generated content, with future work focusing on refining LoRA integration and broadening emotional expression.
 
 </details>
 <br>
