--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -20,7 +20,11 @@
   - 12 [Xuefei Liu](../../Authors/Xuefei_Liu.md)
   - 13 [Yongwei Li](../../Authors/Yongwei_Li.md)
 - 机构:
-  - 机构 
+  - [中国科学院自动化研究所](../../Institutions/CHN_CAS_中国科学院.md)
+  - [中国科学院大学](../../Institutions/CHN-UCAS_中国科学院大学.md)
+  - [中国传媒大学](../../Institutions/CHN-CUC_中国传媒大学.md)
+  - [清华大学](../../Institutions/CHN-THU_清华大学.md)
+  - [上海第二工业大学](../../Institutions/CHN-SSPU_上海第二工业大学.md)
 - 时间:
   - 预印时间: 2024.08.20 ArXiv v1
   - 更新笔记: 2024.08.21
@@ -41,7 +45,7 @@
   - [VCTK](../../Datasets/2012.08.00_VCTK.md)
   - [ESD](../../Datasets/2020.10.28_ESD.md)
 - 对比:
-  - ?
+  - [VITS2](2023.07.31_VITS2.md) + [LoRA](../../Modules/LoRA/LoRA.md)
 - 复现:
   - ?
 
@@ -74,7 +78,7 @@
 <summary>展开原文</summary>
 
 > The development of text-to-speech (TTS) has reached a point where it can generate very high-quality speech. 
-> For example, VITS \cite{kim2021conditional} and Grad-TTS \cite{popov2021grad} have incorporated complex neural network architectures and training strategies to generate results that are very close to real speech.
+> For example, [VITS [1]](2021.06.11_VITS.md) and [Grad-TTS [2]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) have incorporated complex neural network architectures and training strategies to generate results that are very close to real speech.
 > In this field, emotion generation has always been a hot topic that researchers are constantly exploring.
 > Adding emotion to speech not only enhances the realism of generated results, but also has significant application value in various real-life scenarios, such as in movies, games, and voice acting.
 >
@@ -92,7 +96,7 @@
 >
 > Despite the outstanding emotional expression achieved by these methods, their inclusion of emotion information during training limits the inference stage to a fixed number of emotion categories, resulting in insufficient scalability and flexibility.
 > In the current context of the booming development of AIGC technology, fine-tuning large models with all parameters requires a significant amount of computational cost. 
-> Therefore, the LoRA \cite{hu2021LoRA} plugin method has emerged. 
+> Therefore, the [LoRA [9]](../../Modules/LoRA/LoRA.md) plugin method has emerged. 
 > It records new knowledge by freezing the original parameters of the model and multiplying two low-rank matrices. 
 > When facing different downstream segmentation tasks, LoRA can train multiple sets of plugins to achieve plug-and-play simultaneously.
 >
@@ -109,7 +113,7 @@
 > Although there are many applications and improvements of LoRA, most of them are limited to adjusting the condition part of the model, which requires the model to pre-introduce control information. 
 > This actually limits the potential for further expansion of the model's functionality. 
 > Therefore, we propose the Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method.
-> We use the VITS2 model \cite{kong2023vits2} as our baseline, training the model with neutral speech data.
+> We use the [VITS2 [17]](2023.07.31_VITS2.md) model as our baseline, training the model with neutral speech data.
 > Subsequently, we added LoRA to different modules within the model and fine-tuned it with emotional speech data, using subjective and objective experiments to verify and test the impact of adding LoRA at different positions. 
 > We also trained a separate set of LoRA for each emotion to test LoRA's ability to learn different emotions. 
 > After endowing the neutral model with emotional generation capabilities, we further explore the impact of the rank size of LoRA and the difference compared to directly fine-tuning the entire model.
@@ -122,7 +126,7 @@
 <br>
 
 语音合成发展至今已经能合成十分高质量的语音。
-如 VITS \cite{kim2021conditional}和Grad-TTS\cite{popov2021grad}，通过引入复杂的神经网络结构和训练策略，已经能够生成非常接近真实音频的结果。
+如 [VITS [1]](2021.06.11_VITS.md) 和 [Grad-TTS [2]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md)，通过引入复杂的神经网络结构和训练策略，已经能够生成非常接近真实音频的结果。
 在这个领域中，情感生成一直是研究者们不断深挖的热点。
 让语音变得有情感，不仅可以提高生成结果的真实性，在现实诸多的生活场景中例如在电影、游戏、配音等也有极高的应用价值。
 
@@ -146,7 +150,7 @@
 - L Zhang等人 \cite{zhang2023LoRA}将两个低秩矩阵的其中一个冻结，只单独训练了一个矩阵。这样，参数数量减少了一半，而性能却与使用普通 LoRA 技术相当。
 
 虽然目前已经有很多LoRA的应用与改进，但他们大多只局限于调整模型的condition部分，即需要模型预先引入控制信息。这其实限制了模型功能进一步拓展的可能。因此我们提出 Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech (EELE) method.
-我们以 VITS2 \cite{kong2023vits2}模型作为基线，用中性语料训练模型。
+我们以 [VITS2 [17]](2023.07.31_VITS2.md) 模型作为基线，用中性语料训练模型。
 之后我们在模型不同模块内添加LoRA并用情感语料微调，用主观和客观实验来验证和测试LoRA添加在不同位置的影响。我们还为每一种情感都单独训练了一套LoRA来测试LoRA对不同情感的学习效果。赋予中性模型情感生成能力后，我们还验证了秩大小对LoRA情感学习能力的影响，并且我们还比较了与直接微调的效果差异。
 
 主要贡献如下：
@@ -165,11 +169,11 @@ None
 
 > This section mainly introduces our various attempts to add emotional generation capabilities to the neutral synthesis model using LoRA, as well as the models and methods we used.
 >
-> We explored using the current mainstream VITS2 model \cite{kong2023vits2}. 
+> We explored using the current mainstream [VITS2 [17]](2023.07.31_VITS2.md) model. 
 > We added LoRA modules to the model using Microsoft's open-source LoRAlib package \cite{hu2022LoRA}. 
 > We experimented with eight different combinations of adding LoRA, as shown in Figure.01.
 >
-> The VITS2 \cite{kong2023vits2} model utilizes GAN \cite{creswell2018generative} mechanisms during training. 
+> The [VITS2 [17]](2023.07.31_VITS2.md) model utilizes GAN \cite{creswell2018generative} mechanisms during training. 
 > Since the discriminator does not participate in the inference process, its parameters are not frozen during fine-tuning. 
 > Similarly, the speech encoder also follows this approach.
 
@@ -187,8 +191,8 @@ None
 > "Fire": Freezing All Parameters and Adding LoRA for Fine-Tuning.
 
 本节主要介绍我们利用LoRA为中性合成模型添加情感生成能力所做的各种尝试，以及我们所用模型和方法。
-我们用目前主流的VITS2\cite{kong2023vits2}模型进行探索。用微软开源的LoRAlib包\cite{hu2022LoRA}为模型添加LoRA模块。我们进行了8种不同添加LoRA的组合如图1所示\ref{all_try}.
-VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过程，因此不考虑在微调时将其冻结参数。同时这样做的还有音频的编码器。
+我们用目前主流的 [VITS2 [17]](2023.07.31_VITS2.md) 模型进行探索。用微软开源的LoRAlib包\cite{hu2022LoRA}为模型添加LoRA模块。我们进行了8种不同添加LoRA的组合如图1所示\ref{all_try}.
+[VITS2 [17]](2023.07.31_VITS2.md) 模型在训练时用到了GAN的机制，由于判别器不参与推理过程，因此不考虑在微调时将其冻结参数。同时这样做的还有音频的编码器。
 
 ### 3.1.Where to add: Exploring the deployment of LoRA
 
@@ -218,14 +222,14 @@ VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过
 <details>
 <summary>展开原文</summary>
 
-> In the VITS2 model \cite{kong2023vits2}, linear layers and 1D convolutional layers are primarily used. 
+> In the [VITS2 [17]](2023.07.31_VITS2.md) model, linear layers and 1D convolutional layers are primarily used. 
 > The LoRAlib package \cite{hu2022LoRA} conveniently includes methods for adding LoRA to these types of layers. 
 > After importing the package, we added low-rank matrices to each layer of the corresponding modules according to the eight different schemes, as illustrated in Figure \ref{LoRA}.
 
 </details>
 <br>
 
-VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAlib package \cite{hu2022LoRA}中正好内置了这些层添加LoRA的方式。我们导入包后按照8中方案分别为对应模块的每个层添加低秩矩阵，如图\ref{LoRA}所示。
+[VITS2 [17]](2023.07.31_VITS2.md) 模型中主要是线性层和一维卷积层，LoRAlib package \cite{hu2022LoRA}中正好内置了这些层添加LoRA的方式。我们导入包后按照8中方案分别为对应模块的每个层添加低秩矩阵，如图\ref{LoRA}所示。
 
 ## 4.Experiments: 实验
 
