--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -7,9 +7,9 @@
 - 标题: EELE: Exploring Efficient and Extensible LoRA Integration in Emotional Text-to-Speech
 - 作者:
   - 01 [Xin Qi](../../Authors/Xin_Qi.md)
-  - 02 [Ruibo Fu](../../Authors/Ruibo_Fu.md)
-  - 03 [Zhengqi Wen](../../Authors/Zhengqi_Wen.md)
-  - 04 [Jianhua Tao](../../Authors/Jianhua_Tao.md)
+  - 02 [Ruibo Fu](../../Authors/Ruibo_Fu_(傅睿博).md)
+  - 03 [Zhengqi Wen](../../Authors/Zhengqi_Wen_(温正棋).md)
+  - 04 [Jianhua Tao](../../Authors/Jianhua_Tao_(陶建华).md)
   - 05 [Shuchen Shi](../../Authors/Shuchen_Shi.md)
   - 06 [Yi Lu](../../Authors/Yi_Lu.md)
   - 07 [Zhiyong Wang](../../Authors/Zhiyong_Wang.md)
@@ -18,7 +18,7 @@
   - 10 [Yukun Liu](../../Authors/Yukun_Liu.md)
   - 11 [Guanjun Li](../../Authors/Guanjun_Li.md)
   - 12 [Xuefei Liu](../../Authors/Xuefei_Liu.md)
-  - 13 [Yongwei Li](../../Authors/Yongwei_Li.md)
+  - 13 [Yongwei Li](../../Authors/Yongwei_Li_(李永伟).md)
 - 机构:
   - [中国科学院自动化研究所](../../Institutions/CHN_CAS_中国科学院.md)
   - [中国科学院大学](../../Institutions/CHN-UCAS_中国科学院大学.md)
