--- a/Models/E2E/2024.08.22_VoiceX.md
+++ b/Models/E2E/2024.08.22_VoiceX.md
@@ -126,6 +126,28 @@
 > Specifically, we use the PCA model that has already been used by van Rijn et al. \cite{van2024giving}. Their model was fitted on the 110 speakers of the VCTK dataset. 
 > We perform our human-in-the-loop algorithm solely on the first 10 PCA components of that model, which we inversely feed into the PCA model to obtain the 256-dimensional representation that the VITS model demands.
 
+### 3.3.Voice Creation
+
+#### Evolution Strategy (ES)
+
+> The modification of the synthesized voice is achieved through the implementation of a $(1 + \lambda)$-ES \cite{beyer2002evolution}, where $\lambda$ represents the offspring size. 
+> As such, one whole population consists of $1 + \lambda$ individuals. 
+> One individual contains the first 10 PCA component values of one speaker embedding.
+> In common evolutionary strategies, the phenotypes (which in our case would be voices synthesized using the speaker embeddings obtained through the individual PCA component sets) of the whole population would be evaluated by a fitness function to determine the best individuals. 
+> For our human-in-the-loop approach, that fitness function gets replaced by human judgment, i.e., the user assesses the best individual by listening to the voices.
+> A similar approach was followed by Ritschel et al. \cite{ritschel2019personalized} -- although they did not tackle the use-case of TTS customization. Rather, they used a human-in-the-loop ES to steer the customization of non-verbal affective sounds for social robots.
+> We set $\lambda$ to $1$ -- which means that in total, one population consists of one parent individual and one offspring individual. 
+> As such, the user must only listen to two voices per iteration and judge which one s/he likes better.
+> After that decision has been made, the PCA set that produces the better results is selected as the parent for a new population.
+> The offspring of the new population is produced by mutating that parent. 
+> For mutation, we implemented an epsilon mutation strategy with $\epsilon = 0.2$, which means that in $80\%$ of the cases, the offspring is produced by an actual mutation of the parent, and in $20\%$ of the cases the offspring is just a random new individual. 
+> Doing so prevents the whole ES loop from getting stuck in a local minimum. The mutation operation itself adds Gaussian noise to the PCA components, leading to a slightly altered voice.
+> After the mutation took place, the new population (i.e., the best individual from the last iteration and newly formed individual) is transformed into speaker embeddings (by the inverse use of the PCA model), synthesized to speech (by the use of the VITS model), and the resulting phenotypes of the new population are again presented to the user.
+> The overall loop continues until the user is satisfied with a voice.
+> As related work \cite{van2022voiceme} has shown that the most important characteristic that steers voice customization decisions is the perceived gender of voices, we wanted to make sure that users can set that course right from the beginning of the interaction.
+> As such, for the initial population, we use two predefined speaker embeddings: one that represents a stereotypical male voice, and one that represents a stereotypical female voice. 
+> Figure \ref{fig:ea_scheme} depicts the overall scheme of our human-in-the-loop evolutionary algorithm.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
