--- a/Models/E2E/2024.08.22_VoiceX.md
+++ b/Models/E2E/2024.08.22_VoiceX.md
@@ -148,6 +148,15 @@
 > As such, for the initial population, we use two predefined speaker embeddings: one that represents a stereotypical male voice, and one that represents a stereotypical female voice. 
 > Figure \ref{fig:ea_scheme} depicts the overall scheme of our human-in-the-loop evolutionary algorithm.
 
+#### Web Interface
+
+> To emphasize the overall simplicity of our voice creation paradigm, we designed an easy-to-use web interface that can be used to perform the human-in-the-loop evolutionary strategy\footnote{URL blinded for review.}. 
+> A screenshot of the interface is shown in Figure \ref{fig:screenshot_gui}. 
+> As can be seen there, the interaction elements are two buttons that can be used to decide on the preferred voice of the current iteration. 
+> The voices are played back alternately, with visual animations indicating the voice that is played.
+> An additional button is used to end the process. 
+> After clicking that button, the user can end the voice creation loop and download a voice file -- that voice file can then be used for TTS purposes through our dedicated open-source Python API that we provide publicly as PyPi package\footnote{Link to the repository will be made publicly available on acceptance.}.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
