--- a/Models/E2E/2024.08.22_VoiceX.md
+++ b/Models/E2E/2024.08.22_VoiceX.md
@@ -181,6 +181,31 @@
 
 ## 5.Results: 结果
 
+> Results for the subjective measures are shown in Table 1.
+> Here, the self-assessment of how creating a voice with the given personality worked for the participants averaged at $4.57$, while the mean opinion score regarding the voice quality of the created voice reached a mean of $4.32$.
+>
+> The results for the semi-objective part of the study (i.e., the BFI subscale scores) are shown in Table 2. 
+
+### Discussion
+
+> The outcomes of our study highlight several pivotal insights into the VoiceX framework's effectiveness and the subjective nature of voice personality perception.
+>
+> First and foremost, the voice quality mean opinion score (MOS) was $4.32$, which is very similar to the MOS that was reported by the authors of VITS (which was, depending on the used evaluation dataset, between $4.38$ and $4.43$). 
+> This underscores VoiceX's ability to maintain high speech quality, despite the interpolation through the speaker embedding space is performed without further constraints to maintaining a certain value distribution.
+> This finding is critical, as it demonstrates that our customization approach does not compromise the inherent quality of the synthesized voices.
+>
+> As can be seen in the results regarding the customization capabilities of VoiceX, there is a huge discrepancy in the semi-objective versus subjective measures. 
+> While in the former one (see Table 2), there is no tendency observable that participants overall were able to create a voice that matches the personality which their task demanded, the subjective measure tells the opposite: the explicit question of how creating a voice with the given personality worked for the participants was rated with $4.57$ out of $5$ on average.
+> This divergence between semi-objective and subjective assessments of the voices is majorly interesting and inevitably leads to the question of how this could happen.
+> One explanation might be the chosen personality questionnaire for the semi-objective assessments of the voices. 
+> The BFI was initially developed to self-assess personality. 
+> We have ``misappropriated'' it as a measure to assess the personality of a voice -- which might not have been the optimal choice. 
+> Another possible reason for the contrary results might be that participants simply do not have an imagination of how a voice with a specific personality sounds, as the voice itself might not directly correlate with certain personality traits. 
+> This is in line with findings from Scherer et al. \cite{scherer1978personality} who reported that in an experiment where humans labeled speech regarding certain personality traits, they could find significant correlations between speech and personality only for extraversion -- which is also the only personality trait where we could observe a notable and correct trend between the trait minimization and maximization tasks, as depicted in Figure \ref{fig:bigfive}.
+> As such, the interaction with the VoiceX system might have been rather exploratory, maybe even ignoring the overall target -- but still having the feeling of \emph{doing it right}. 
+>
+> As the participants' subjective measure of how they performed was high, we claim that the system has huge potential for voice customization: After all, the own \emph{perception} of how the task worked out is arguably the most important metric when evaluating the efficacy of customizing a voice to one's \emph{own}, \emph{personal} needs.
+
 ## 6.Conclusions: 结论
 
 > In this work, we presented \emph{VoiceX}, a system that uses a \emph{VITS} model as the backbone TTS engine and allows users to create custom voices in an efficient, user-friendly way.
