--- a/Models/E2E/2024.08.20_SSL-TTS.md
+++ b/Models/E2E/2024.08.20_SSL-TTS.md
@@ -43,6 +43,22 @@
 
 ## 1.Introduction: 引言
 
+> Neural text-to-speech (TTS) synthesis has advanced significantly in recent years, achieving a level of naturalness comparable to human speech and allowing for an increasingly expressive range of outputs \cite{tan2021survey, vits, shen2024naturalspeech, styletts2}.
+> Neural TTS systems can be categorized into two-stage and single-stage pipelines. Two-stage models convert phonemic features into acoustic features and then use a vocoder to generate waveforms. These models can suffer from error propagation and limitations due to their dependence on low-level features like mel-spectrograms \cite{glowtts, fastpitch, tacotron2}.
+> Single-stage models aim to address these issues by streamlining this process into an end-to-end framework \cite{vits, pmlr-v162-casanova22a, lee2022hierspeech}, but they may face oversmoothing, mispronunciations, and reduced flexibility due to the lack of explicit linguistic information and entangled latent representations \cite{lee2022hierspeech, choi2023nansy}.
+> Recent research combines the strengths of both approaches by using self-supervised learning (SSL) speech representations as intermediate elements in two-stage models \cite{choi2023nansy, wavthruvec, parrottts, comparative_study_ssl_tts}. These representations help improve word error rates, pronunciation of out-of-vocabulary words \cite{wavthruvec}, and robustness to noise \cite{zhu2023rep2wav}, leading to high-quality, natural speech often surpassing end-to-end models.
+>
+> In practice, end-user applications may need multiple voices. Collecting high quality speech data and building a TTS model for each target speaker/voice is a challenging problem. So, there has been a growing interest in zero-shot multi-speaker TTS systems which can synthesize speech in an unseen speaker's voice based on short reference samples. State-of-the-art models such as XTTS \cite{casanova2024xtts} and HierSpeech++~\cite{lee2023hierspeechbridginggapsemantic} demonstrate impressive quality and similarity to unseen speakers. However, these models require end-to-end training on thousands of hours of transcribed audio data from a large number of speakers to generalize effectively.
+>
+> Simultaneously, kNN-VC \cite{baas23_interspeech} has emerged as a promising any-to-any voice conversion method, leveraging SSL features for zero-shot conversion. It uses a kNN algorithm to match frames from the source speaker with the target speaker's representations, adjusting the speaker identity while preserving speech content. This approach is similar to retrieval-augmented generation (RAG) techniques used in deep generative models such as language models \cite{khandelwal2020knnlm} and image generators \cite{chen2022reimagen}. These methods can enhance accuracy, reliability, and enable style transfer by steering model outputs to mirror characteristics of a retrieval database \cite{chen2022reimagen, borgeaud2022improving}.
+>
+> Building on these insights, we propose SSL-TTS, a lightweight framework for multi-speaker zero-shot TTS that leverages SSL features encapsulating both speaker and linguistic information.
+> In the first stage of the framework, text is converted to SSL embeddings, which are then matched with corresponding features from a target speaker by exploiting their linear relationship. Similar to kNN-VC, this modifies the target voice in a non-parametric manner and obviates the need for multi-speaker transcribed data for training. A waveform is finally generated from the converted features using a pre-trained vocoder. The only component that requires training is the Text-to-SSL model, which can be trained on transcribed data from a single speaker only. Furthermore, we introduce a linear interpolation parameter allowing for fine-grained control over the influence of the target style on the output.
+> We validate the approach by implementing the Text-to-SSL block using two different lightweight models, namely GlowTTS \cite{glowtts} and GradTTS \cite{pmlr-v139-popov21a-gradtts}. We train them on transcribed speech from a single speaker, and compare them with state-of-the-art zero-shot multi-speaker models using objective metrics and subjective listening tests. 
+> The code and trained models will be made public upon publication, demo samples are available at https://idiap.github.io/ssl-tts/
+>
+> This paper is organized as follows. The next section introduces the proposed framework. Section 3 details the implementation and evaluation setup. Section 4 presents and analyzes the results. Section 5 offers a discussion and concludes. 
+
 ## 2.Related Works: 相关工作
 
 ## 3.Methodology: 方法
