--- a/Models/E2E/2024.08.20_SSL-TTS.md
+++ b/Models/E2E/2024.08.20_SSL-TTS.md
@@ -117,6 +117,14 @@ $$
 
 ## 5.Results: 结果
 
+> Results are presented in Table \ref{tab:model_comp}. Objective metrics reveal that the SSL-TTS models demonstrate the best speaker similarity, XTTS excels in intelligibility, and HierSpeech++ achieves the highest naturalness. Subjective evaluations show that listeners rated HierSpeech++ highest for naturalness and similarity, while the SSL-TTS models and XTTS performed similarly. These models' results fall within each other's confidence intervals, suggesting comparable performance.
+> Regarding model efficiency, SSL-TTS models have the fewest parameters and lowest memory requirements among the top performers. Notably, GlowTTS-SSL requires $3\times$ less memory than HierSpeech++ with comparable speed. GradTTS-SSL's memory usage and RTF are higher due to the 100 iterations used in the diffusion decoder. Further, the SSL-TTS models are trained on 100$\times$ less transcribed data than HierSpeech++ and 1000$\times$ less data than XTTS.
+>
+> The speaker similarity matrix (Figure \ref{fig:sim_matrix}) illustrates the results of the controllability experiment. We can observe that the similarity of the outputs to the target speaker gradually increases as $\lambda$ rises.
+> This demonstrates the framework's ability to blend source and target styles in a fine-grained manner and suggests the potential to combine multiple target styles.
+>
+> We conduct ablation studies to evaluate the models' outputs with varying amounts of reference utterances. Figure \ref{fig:ljspeech_plot} compares outputs using kNN retrieval from different amounts of LJSpeech data. We find that approximately 30 seconds of reference utterances are needed to achieve suitable intelligibility, while naturalness improves up to 5 minutes, surpassing the model outputs without kNN retrieval. Figure \ref{fig:libri4077_plot} compares the SSL-TTS models to the baselines for different amounts of reference utterances from a target speaker. Similarly, about 30~seconds are required for suitable intelligibility, while similarity plateaus at around 1 minute. In contrast, the baselines benefit less from increasing the amount of reference utterances beyond 10 to 30 seconds.
+
 ## 6.Conclusions: 结论
 
 > State-of-the-art zero-shot multi-speaker TTS models rely on large datasets of transcribed speech from thousands of speakers for training. In this paper, we demonstrated that by combining SSL features and kNN retrieval methods, we can develop a lightweight TTS system that achieves a comparable level of naturalness and similarity to other approaches while requiring transcribed data from only a single speaker. However, there is a trade-off, with the other approaches performing better with just a few seconds of reference audio, while our method needs at least 30 seconds of reference audio, which is still a manageable requirement. We further showed that fine-grained control over the influence of the target style on the output can be achieved using an interpolation parameter. This indicates that this technique, which is originally inspired from other domains such as language modeling~\cite{khandelwal2020knnlm} and machine translation \cite{khandelwal2021knnmt}, also applies to TTS.
